tarea_programada_1/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files (x86)\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.11.jar;C:\Program Files (x86)\BlueJ\lib\hamcrest-core-1.3.jar;C:\Program Files (x86)\BlueJ\lib\lang-stride.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-service.jar;C:\Users\metal\Documents\GitHub\progra_1_poo\tarea_programada_1
-d
C:\Users\metal\Documents\GitHub\progra_1_poo\tarea_programada_1\doc
-encoding
UTF-8
-charset
UTF-8
C:\Users\metal\Documents\GitHub\progra_1_poo\tarea_programada_1\usuarios\textedit_usu_adm.java
<---- end of javadoc command ---->
Loading source file C:\Users\metal\Documents\GitHub\progra_1_poo\tarea_programada_1\usuarios\textedit_usu_adm.java...
Constructing Javadoc information...
C:\Users\metal\Documents\GitHub\progra_1_poo\tarea_programada_1\usuarios\textedit_usu_adm.java:17: error: cannot find symbol
    private JLineEdit textedit_administrador;
            ^
  symbol:   class JLineEdit
  location: class textedit_usu_adm
Standard Doclet version 1.8.0_144
Building tree for all the packages and classes...
Generating C:\Users\metal\Documents\GitHub\progra_1_poo\tarea_programada_1\doc\usuarios\textedit_usu_adm.html...
Generating C:\Users\metal\Documents\GitHub\progra_1_poo\tarea_programada_1\doc\usuarios\package-frame.html...
Generating C:\Users\metal\Documents\GitHub\progra_1_poo\tarea_programada_1\doc\usuarios\package-summary.html...
Generating C:\Users\metal\Documents\GitHub\progra_1_poo\tarea_programada_1\doc\constant-values.html...
Generating C:\Users\metal\Documents\GitHub\progra_1_poo\tarea_programada_1\doc\serialized-form.html...
Building index for all the packages and classes...
Building index for all classes...
Generating C:\Users\metal\Documents\GitHub\progra_1_poo\tarea_programada_1\doc\allclasses-frame.html...
Generating C:\Users\metal\Documents\GitHub\progra_1_poo\tarea_programada_1\doc\allclasses-noframe.html...
Generating C:\Users\metal\Documents\GitHub\progra_1_poo\tarea_programada_1\doc\index.html...
1 warning
